--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 DATABASE_URL=sqlite:///db.sqlite3
 DEBUG=true
 LANGUAGE_CODE=de-de
+MEDIA_ROOT=media/
 SECRET_KEY="django-insecure-0vmd)dzp1if@fftcsgaka2y5m5+&r#k^!1yq5d3pq8*w)l3ku^"
 TIME_ZONE=Europe/Berlin
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
+S3_ENDPOINT_URL=
+S3_CUSTOM_DOMAIN=
