--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ django-pictures = "^1.3.3"
 filetype = "^1.2.0"
 django-components = "^0.102"
 django-csp = "^3.8"
+psycopg2 = "^2.9.10"
 
 
 [build-system]
