--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ django-components = "^0.102"
 django-csp = "^3.8"
 psycopg2 = "^2.9.10"
 django-s3-storage = "^0.15.0"
+redis = "^5.2.0"
 
 
 [build-system]
