feat: Add celery queue

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ DEBUG=true
 LANGUAGE_CODE=de-de
 SECRET_KEY="django-insecure-0vmd)dzp1if@fftcsgaka2y5m5+&r#k^!1yq5d3pq8*w)l3ku^"
 TIME_ZONE=Europe/Berlin
+EMAIL_FROM=vz@example.com
+EMAIL_URL=smtp://localhost
+BASE_URL=http://localhost:8000
+CELERY_BROKER_URL=amqp://
+CACHE_URL=locmemcache://
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
 S3_BUCKET_NAME=
