Everything execept assets delivery seems to work now

--- a/kubernetes/values.yaml
+++ b/kubernetes/values.yaml
@@ -142,7 +142,8 @@ affinity: {}
 
 redis:
   architecture: standalone
-
+  auth:
+    enabled: false
 minio:
   provisioning:
     buckets: "geheimvz"
