--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ redis = "^5.2.0"
 celery = {extras = ["redis"], version = "^5.4.0"}
 django-annoying = "^0.10.7"
 psycopg = {extras = ["binary"], version = "^3.2.3"}
+django-health-check = "^3.18.3"
 
 
 [build-system]
