--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ psycopg2 = "^2.9.10"
 django-s3-storage = "^0.15.0"
 redis = "^5.2.0"
 celery = {extras = ["redis"], version = "^5.4.0"}
+django-health-check = "^3.18.3"
 
 
 [build-system]
