--- a/kubernetes/values.yaml
+++ b/kubernetes/values.yaml
@@ -106,11 +106,11 @@ resources: {}
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 livenessProbe:
   httpGet:
-    path: /healthz
+    path: /healthz/
     port: http
 readinessProbe:
   httpGet:
-    path: /healthz
+    path: /healthz/
     port: http
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
