--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ TIME_ZONE=Europe/Berlin
 EMAIL_FROM=vz@example.com
 EMAIL_URL=smtp://localhost
 BASE_URL=http://localhost:8000
-CELERY_BROKER_URL=amqp://
+QUEUE_BROKER_URL=redis://localhost:6379/1
 CACHE_URL=locmemcache://
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
