--- a/kubernetes/templates/deployment.yaml
+++ b/kubernetes/templates/deployment.yaml
@@ -80,23 +80,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           livenessProbe:
-            exec:
-              command:
-                - /app/.venv/bin/celery
-                - -A
-                - geheimvz
-                - inspect
-                - ping
-            timeoutSeconds: 10
+            {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
-            exec:
-              command:
-                - /app/.venv/bin/celery
-                - -A
-                - geheimvz
-                - inspect
-                - ping
-            timeoutSeconds: 10
+            {{- toYaml .Values.readinessProbe | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
@@ -109,13 +95,10 @@ spec:
               readOnly: true
           {{- with .Values.volumeMounts }}
           {{- toYaml . | nindent 12 }}{{- end }}
-          command: [ "/app/.venv/bin/celery" ]
+          command: [ "/app/.venv/bin/python "]
           args:
-            - -A
-            - geheimvz
-            - worker
-            - -l
-            - INFO
+            - manage.py
+            - rundramatiq
           env:
             - name: S3_ACCESS_KEY_ID
               valueFrom:
