--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ psycopg = {extras = ["binary"], version = "^3.2.3"}
 dramatiq = {extras = ["redis", "watch"], version = "^1.17.1"}
 django-dramatiq = "^0.11.6"
 django-rename-app = "^0.1.7"
+django-allauth = "^65.2.0"
 
 
 [build-system]
