--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=sqlite:///db.sqlite3
+DATABASE_URL=psql://postgres:geheimvz@localhost/postgres
 DEBUG=true
 LANGUAGE_CODE=de-de
 SECRET_KEY="django-insecure-0vmd)dzp1if@fftcsgaka2y5m5+&r#k^!1yq5d3pq8*w)l3ku^"
