--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dramatiq = {extras = ["redis", "watch"], version = "^1.17.1"}
 django-dramatiq = "^0.11.6"
 django-rename-app = "^0.1.7"
 django-allauth = "^65.2.0"
+django-prometheus = "^2.3.1"
 
 
 [build-system]
