--- a/kubernetes/templates/configmap.yaml
+++ b/kubernetes/templates/configmap.yaml
@@ -17,7 +17,7 @@ data:
     CACHE_URL={{ .Values.config.CACHE_URL }}
     S3_BUCKET_NAME={{ .Values.config.S3_BUCKET_NAME }}
     S3_ENDPOINT_URL={{ .Values.config.S3_ENDPOINT_URL }}
-    S3_CUSTOM_DOMAIN={{ .Values.config.S3_CUSTOM_DOMAIN }}
+    S3_PUBLIC_URL={{ .Values.config.S3_CUSTOM_DOMAIN }}
     ALLOWED_HOSTS={{ .Values.config.ALLOWED_HOSTS }}
     CSRF_TRUSTED_ORIGINS={{ .Values.config.BASE_URL }}
 
